syntax = "proto3";

option go_package = ".;model";
package ortoo;

import "ortoo.enum.proto";

message Client {
  bytes CUID = 1;
  string alias = 2;
  string collection = 3;
  SyncType syncType = 4;
}

message Timestamp {
  // @inject_tag: json:"e,omitempty"
  uint32 era = 1;
  // @inject_tag: json:"l,omitempty"
  uint64 lamport = 2 [jstype = JS_STRING];
  // @inject_tag: json:"c,omitempty"
  bytes CUID = 3;
  // @inject_tag: json:"d,omitempty"
  uint32 delimiter = 4;
}

message OperationID {
  // @inject_tag: json:"e,omitempty"
  uint32 era = 1;
  // @inject_tag: json:"l,omitempty"
  uint64 lamport = 2 [jstype = JS_STRING];
  // @inject_tag: json:"c,omitempty"
  bytes CUID = 3;
  // @inject_tag: json:"s,omitempty"
  uint64 seq = 4 [jstype = JS_STRING];
}

message Operation {
  OperationID ID = 1;
  TypeOfOperation opType = 2;
  bytes body = 3;
}


message PushPullPack {
  bytes DUID = 1;
  string key = 2;
  fixed32 option = 3;
  CheckPoint checkPoint = 4;
  uint32 era = 5;
  int32 type = 6;
  repeated Operation operations = 7;
}

message CheckPoint {
  // @inject_tag: bson:"s",json:"s"
  uint64 sseq = 1 [jstype = JS_STRING];
  // @inject_tag: bson:"c",json:"c"
  uint64 cseq = 2 [jstype = JS_STRING];
}

message NotificationPushPull {
  string CUID = 1;
  string DUID = 2;
  uint64 sseq = 3 [jstype = JS_STRING];
}

message DatatypeMeta {
  string key = 1;
  bytes DUID = 2;
  OperationID opID = 3;
  TypeOfDatatype typeOf = 4;
  StateOfDatatype state = 5;
}

message ResponseState {
  StateOfResponse state = 1;
  string msg = 2;
}

message Header {
  string version = 1;
  string collection = 2;
  bytes cuid = 3;
  string clientAlias = 4;
  RequestType type = 5;
}

message ClientRequest {
  Header header = 1;
  SyncType syncType = 2;
}

message ClientResponse {
  Header header = 1;
  ResponseState state = 2;
}


message PushPullRequest {
  Header header = 1;
  repeated PushPullPack PushPullPacks = 2;
}

message PushPullResponse {
  Header header = 1;
  repeated PushPullPack PushPullPacks = 2;
}

message CollectionMessage {
  string version = 1;
  string collection = 2;
}
